Since we now use Java 8, we no longer need to use MaxPermSize
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1709718 13f79535-47bb-0310-9956-ffa450edef68